--- a/package.json
+++ b/package.json
@@ -4,29 +4,37 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "remix build",
     "buildPlugins": "node plugins/plugin-compiler.js",
-    "dev": "node -r dotenv/config node_modules/.bin/remix dev",
+    "dev:remix": "node -r dotenv/config node_modules/.bin/remix dev",
     "postinstall": "remix setup node",
-    "deploy": "npm run build flyctl deploy",
-    "start": "node -r dotenv/config node_modules/.bin/remix-serve build"
+    "deploy": "npm run build && flyctl deploy",
+    "start": "node -r dotenv/config node_modules/.bin/remix-serve build",
+    "build": "npm run build:css && remix build",
+    "build:css2": "tailwindcss -o app/styles/tailwind.css",
+    "build:css": "postcss styles --base styles --dir app/styles --env production",
+    "dev": "npm run buildPlugins && concurrently \"npm run dev:css\" \"npm run dev:remix\"",
+    "dev:css": "postcss styles --base styles --dir app/styles -w",
+    "dev:cssOld": "tailwindcss --config ./tailwind.config.js -o app/styles/tailwind.css --watch",
+    "tailwind": "npx tailwindcss build -o src/tailwind.css"
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@reduxjs/toolkit": "^1.6.2",
     "@remix-run/react": "^1.0.5",
     "@remix-run/serve": "^1.0.5",
+    "remix": "^1.0.5",
+    "react-dom": "^17.0.2",
+    "react": "^17.0.2",
+    "postcss": "^8.4.4",
+    "postcss-cli": "^9.0.2",
+    "tailwindcss": "^2.2.19",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
     "lodash": "^4.17.21",
     "node-fetch": "^1.7.3",
     "nprogress": "^0.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "remix": "^1.0.5",
-    "tailwindcss": "^2.2.19",
     "xstate": "^4.26.1"
   },
   "devDependencies": {
@@ -35,6 +43,8 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^6.4.0",
     "he": "^1.2.0",
     "typescript": "^4.1.2"
   },
