--- a/package.json
+++ b/package.json
@@ -22,22 +22,24 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@remix-run/react": "^1.0.5",
     "@remix-run/serve": "^1.0.5",
-    "remix": "^1.0.5",
-    "react-dom": "^17.0.2",
-    "react": "^17.0.2",
-    "postcss": "^8.4.4",
-    "postcss-cli": "^9.0.2",
-    "tailwindcss": "^2.2.19",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
     "lodash": "^4.17.21",
     "node-fetch": "^1.7.3",
     "nprogress": "^0.2.0",
+    "postcss": "^8.4.4",
+    "postcss-cli": "^9.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "remix": "^1.0.5",
+    "tailwindcss": "^2.2.19",
+    "uuid": "^8.3.2",
     "xstate": "^4.26.1"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.3",
     "@remix-run/dev": "^1.0.5",
     "@types/lodash": "^4.14.177",
     "@types/nprogress": "^0.2.0",
