--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@remix-run/react": "^1.0.5",
     "@remix-run/serve": "^1.0.5",
+    "@types/prettier": "^2.4.2",
+    "@types/rss": "0.0.29",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
@@ -30,10 +32,12 @@
     "nprogress": "^0.2.0",
     "postcss": "^8.4.4",
     "postcss-cli": "^9.0.2",
+    "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "remix": "^1.0.5",
+    "rss": "^1.2.2",
     "tailwindcss": "^2.2.19",
     "uuid": "^8.3.2",
     "xstate": "^4.26.1"
