--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "buildPlugins": "node plugins/plugin-compiler.js",
     "dev:remix": "node -r dotenv/config node_modules/.bin/remix dev",
     "postinstall": "remix setup node",
-    "deploy": "npm run buildPlugins && npm run build && flyctl deploy",
+    "deploy": "npm run build && flyctl deploy",
     "start": "node -r dotenv/config node_modules/.bin/remix-serve build",
-    "build": "npm run build:css && remix build",
+    "build": "npm run buildPlugins && npm run build:css && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
     "dev": "npm run buildPlugins && concurrently \"npm run dev:css\" \"npm run dev:remix\"",
