added url check

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "buildPlugins": "node plugins/plugin-compiler.js",
     "dev:remix": "node -r dotenv/config node_modules/.bin/remix dev",
     "postinstall": "remix setup node",
-    "deploy": "npm run build && flyctl deploy",
+    "deploy": "npm run production && flyctl deploy",
     "start": "node -r dotenv/config node_modules/.bin/remix-serve build",
     "build": "npm run buildPlugins && npm run build:css && remix build",
+    "production": "cross-env NODE_ENV=production npm run build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
     "dev": "npm run buildPlugins && concurrently \"npm run dev:css\" \"npm run dev:remix\"",
@@ -26,6 +27,7 @@
     "@remix-run/serve": "^1.0.5",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
+    "cross-env": "^7.0.3",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
