--- a/.github/workflows/clearResync.yml
+++ b/.github/workflows/clearResync.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: GraphCDN Clear & Recache All Posts
 
 on:
   workflow_dispatch:
@@ -23,5 +23,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
     - run: npm run graphCDN:cacheResync --if-present
