--- a/.github/workflows/clearResync.yml
+++ b/.github/workflows/clearResync.yml
@@ -23,4 +23,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm ci
     - run: npm run graphCDN:cacheResync --if-present
