--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run deploy
-#    - uses: superfly/flyctl-actions@1.1
-#      with:
-#        args: "deploy"
+    - run: npm run build
+    - uses: superfly/flyctl-actions@1.1
+      with:
+        args: "deploy"
