--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -28,4 +28,4 @@ jobs:
     - run: npm run build --if-present
     - uses: superfly/flyctl-actions@1.1
       with:
-        args: "deploy"
+        args: "deploy -c fly-staging.toml"
