--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:remix": "node -r dotenv/config node_modules/.bin/remix dev",
     "postinstall": "remix setup node",
     "deploy": "npm run build && flyctl deploy",
+    "deploy:staging": "npm run build && flyctl deploy -c fly-staging.toml",
     "start": "node -r dotenv/config node_modules/.bin/remix-serve build",
     "build": "npm run buildPlugins && npm run build:css && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
