--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches: [ main ]
 
+env:
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  PUBLIC_WP_API_URL: "https://etheadless.wpengine.com/graphql/"
+
 jobs:
   build:
 
