--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -6,6 +6,8 @@ name: 🚀 Deploy
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
