added new resource routes for login + popup fix

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "build": "npm run buildPlugins && npm run build:css && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev": "npm run buildPlugins && concurrently \"npm run dev:css\" \"npm run dev:remix\"",
+    "dev": "npm run buildPlugins && concurrently \"npm run tailwind\" \"npm run dev:remix\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "dev:cssOld": "tailwindcss --config ./tailwind.config.js -o app/styles/tailwind.css --watch",
-    "tailwind": "npx tailwindcss build -o src/tailwind.css",
+    "tailwind": "npx tailwindcss -i ./styles/app.css -o ./app/styles/app.css --watch",
     "clean": "node clean.js",
     "graphCDN:build": "npx graphcdn push",
     "graphCDN:cacheResync": "node githubActions/clearGraphCDN.js"
@@ -31,19 +31,19 @@
     "cross-env": "^7.0.3",
     "deepmerge": "^4.2.2",
     "dotenv": "^10.0.0",
+    "framer-motion": "^5.4.5",
     "graphql": "^16.0.1",
     "lodash": "^4.17.21",
     "node-fetch": "^1.7.3",
     "nprogress": "^0.2.0",
-    "postcss": "^8.4.4",
-    "postcss-cli": "^9.0.2",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
     "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "remix": "^1.0.5",
     "rss": "^1.2.2",
-    "tailwindcss": "^2.2.19",
     "uuid": "^8.3.2",
     "xstate": "^4.26.1"
   },
@@ -57,6 +57,7 @@
     "autoprefixer": "^10.4.0",
     "concurrently": "^6.4.0",
     "he": "^1.2.0",
+    "tailwindcss": "^3.0.1",
     "typescript": "^4.1.2"
   },
   "engines": {
