added procreate 5x cookie test

--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,6 +1,6 @@
 {
   "name": "Untitled GraphQL Schema",
-  "schemaPath": "https://etheadless.wpengine.com/graphql",
+  "schemaPath": "schema.graphql",
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
