--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "remix": "^1.1.1",
+    "remix-utils": "^2.2.0",
     "rss": "^1.2.2",
     "uuid": "^8.3.2",
     "xstate": "^4.26.1"
