--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ processes = []
   PORT = "8080"
   APP_ROOT_URL = "https://twilight-paper-1622.fly.dev"
   PUBLIC_WP_API_URL = "https://etheadless.graphcdn.app/"
-  WORDPRESS_DB = "https://etheadless.wpengine.com/wp-admin"
+  WORDPRESS_DB = "https://api.every-tuesday.com/wp-admin"
   SESSION_SECRET = "1234"
   RESOURCE_LIBRARY_PW = "asdf"
   PROCREATE_5X_PW = "1234"
