--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
-        "url": "https://etheadless.wpengine.com/graphql",
+        "url": "https://api.every-tuesday.com/graphql",
         "headers": {
           "user-agent": "JS GraphQL"
         },
