--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "npm run buildPlugins && npm run build:css && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev": "npm run buildPlugins && concurrently \"npm run tailwind\" \"npm run dev:remix\"",
+    "dev": "npm run buildPlugins && concurrently \"npm run dev:css\" \"npm run dev:remix\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "dev:cssOld": "tailwindcss --config ./tailwind.config.js -o app/styles/tailwind.css --watch",
     "tailwind": "npx tailwindcss -i ./styles/app.css -o ./app/styles/app.css --watch",
