--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  PUBLIC_WP_API_URL: "https://etheadless.wpengine.com/graphql/"
+  PUBLIC_WP_API_URL: "https://etheadless.graphcdn.app/"
 
 jobs:
   build:
