--- a/.github/workflows/deploy-remote.yml
+++ b/.github/workflows/deploy-remote.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  PUBLIC_WP_API_URL: "https://etheadless.wpengine.com/graphql/"
+  PUBLIC_WP_API_URL: "https://etheadless.graphcdn.app/"
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
