--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "remix setup node",
     "deploy": "npm run build && flyctl deploy",
     "deploy:staging": "npm run build && flyctl deploy -c fly-staging.toml",
-    "start": "node -r dotenv/config node_modules/.bin/remix-serve build",
+    "start": "node --trace-warnings -r dotenv/config node_modules/.bin/remix-serve build",
     "build": "npm run buildPlugins && npm run build:css && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
