--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@remix-run/node": "^1.1.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
     "cross-env": "^7.0.3",
