--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-redux": "^7.2.6",
     "remix": "^1.1.1",
     "remix-utils": "^2.2.0",
@@ -63,7 +64,7 @@
     "autoprefixer": "^10.4.0",
     "concurrently": "^6.4.0",
     "he": "^1.2.0",
-    "tailwindcss": "^3.0.1",
+    "tailwindcss": "^3.0.15",
     "typescript": "^4.1.2"
   },
   "engines": {
