--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "npm run buildPlugins && npm run build:css && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev": "npm run buildPlugins && concurrently \"npm run tailwind\" \"npm run dev:remix\"",
+    "dev": "npm run buildPlugins && concurrently \"npm run dev:css\" \"npm run dev:remix\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "dev:cssOld": "tailwindcss --config ./tailwind.config.js -o app/styles/tailwind.css --watch",
     "tailwind": "npx tailwindcss -i ./styles/app.css -o ./app/styles/app.css --watch",
@@ -37,10 +37,12 @@
     "framer-motion": "^5.4.5",
     "graphql": "^16.0.1",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "node-fetch": "^1.7.3",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
     "@types/lodash": "^4.14.177",
+    "@types/md5": "^2.3.1",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
