final sync to production

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "buildPlugins": "node plugins/plugin-compiler.js",
     "dev:remix": "node -r dotenv/config node_modules/.bin/remix dev",
     "postinstall": "remix setup node",
-    "deploy": "npm run build && flyctl deploy",
+    "deploy": "npm run build && flyctl deploy --verbose",
+    "deploy:no-cache": "npm run build && flyctl deploy --no-cache",
     "deploy:staging": "npm run build && flyctl deploy -c fly-staging.toml",
     "start": "node -r dotenv/config node_modules/.bin/remix-serve build",
     "build": "npm run buildPlugins && npm run build:css && remix build",
