--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.33.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
     "remix": "^1.1.1",
     "remix-utils": "^2.2.0",
@@ -66,6 +67,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/uuid": "^8.3.3",
     "autoprefixer": "^10.4.0",
     "concurrently": "^6.4.0",
