--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "graphql": "^16.0.1",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
-    "node-fetch": "^1.7.3",
+    "node-fetch": "^2.6.7",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
@@ -52,6 +52,8 @@
     "react-intersection-observer": "^8.33.1",
     "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
+    "react-sticky": "^6.0.3",
+    "react-sticky-box": "^1.0.2",
     "remix": "^1.1.1",
     "remix-utils": "^2.2.0",
     "rss": "^1.2.2",
@@ -68,6 +70,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-sticky": "^6.0.4",
     "@types/uuid": "^8.3.3",
     "autoprefixer": "^10.4.0",
     "concurrently": "^6.4.0",
