updated Remix to 1.4

--- a/package.json
+++ b/package.json
@@ -20,16 +20,25 @@
     "tailwind": "npx tailwindcss -i ./styles/app.css -o ./app/styles/app.css --watch",
     "clean": "node clean.js",
     "graphCDN:build": "npx graphcdn push",
-    "graphCDN:cacheResync": "node githubActions/clearGraphCDN.js"
+    "graphCDN:cacheResync": "node githubActions/clearGraphCDN.js",
+    "fix": "npm run buildPlugins && run-p fix:*",
+    "fix:css": "npm run css",
+    "fix:remix": "remix dev",
+    "css": "postcss styles --base styles --dir app/styles -w"
   },
   "dependencies": {
+    "text-to-image": "^4.1.1",
+    "text2png": "^2.3.0",
+    "uuid": "^8.3.2",
+    "xstate": "^4.26.1",
+
     "@apollo/client": "^3.5.6",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.6.2",
-    "@remix-run/node": "^1.1.1",
-    "@remix-run/react": "^1.1.1",
-    "@remix-run/serve": "^1.1.1",
+    "@remix-run/node": "^1.4.3",
+    "@remix-run/react": "^1.4.3",
+    "@remix-run/serve": "^1.4.3",
     "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
@@ -42,10 +51,11 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.7",
+    "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
-    "postcss-import": "^14.0.2",
+    "postcss-import": "^14.1.0",
     "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -53,30 +63,28 @@
     "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
     "react-sticky": "^6.0.3",
-    "react-sticky-box": "^1.0.2",
-    "remix": "^1.1.1",
-    "remix-utils": "^2.2.0",
+    "remix": "^1.4.3",
+    "remix-utils": "^3.2.0",
     "rss": "^1.2.2",
-    "text-to-image": "^4.1.1",
-    "text2png": "^2.3.0",
-    "uuid": "^8.3.2",
-    "xstate": "^4.26.1"
+    "run-p": "^0.0.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.1",
+    "@remix-run/dev": "^1.4.3",
+    "@remix-run/eslint-config": "^1.4.3",
     "@types/lodash": "^4.14.177",
     "@types/md5": "^2.3.1",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-sticky": "^6.0.4",
     "@types/uuid": "^8.3.3",
     "autoprefixer": "^10.4.0",
-    "concurrently": "^6.4.0",
+    "concurrently": "^6.5.1",
+    "eslint": "^8.15.0",
     "he": "^1.2.0",
-    "tailwindcss": "^3.0.15",
-    "typescript": "^4.1.2"
+    "typescript": "^4.6.4"
   },
   "engines": {
     "node": ">=14"
