--- a/package.json
+++ b/package.json
@@ -27,11 +27,6 @@
     "css": "postcss styles --base styles --dir app/styles -w"
   },
   "dependencies": {
-    "text-to-image": "^4.1.1",
-    "text2png": "^2.3.0",
-    "uuid": "^8.3.2",
-    "xstate": "^4.26.1",
-
     "@apollo/client": "^3.5.6",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
@@ -48,6 +43,7 @@
     "dotenv": "^10.0.0",
     "framer-motion": "^5.4.5",
     "graphql": "^16.0.1",
+    "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.7",
@@ -59,6 +55,7 @@
     "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-imgix": "^9.5.1",
     "react-intersection-observer": "^8.33.1",
     "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
@@ -67,7 +64,11 @@
     "remix-utils": "^3.2.0",
     "rss": "^1.2.2",
     "run-p": "^0.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "text-to-image": "^4.1.1",
+    "text2png": "^2.3.0",
+    "uuid": "^8.3.2",
+    "xstate": "^4.26.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
@@ -77,6 +78,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "@types/react-imgix": "^9.4.0",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-sticky": "^6.0.4",
     "@types/uuid": "^8.3.3",
