--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "npm run build && flyctl deploy --verbose",
     "deploy:no-cache": "npm run build && flyctl deploy --no-cache",
     "deploy:staging": "npm run build && flyctl deploy -c fly-staging.toml",
-    "start": "node -r dotenv/config node_modules/.bin/remix-serve build",
+    "startold": "node -r dotenv/config node_modules/.bin/remix-serve build",
+    "start": "remix-serve build",
     "build": "npm run buildPlugins && npm run build:css && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
@@ -39,7 +40,7 @@
     "canvas": "^2.8.0",
     "cross-env": "^7.0.3",
     "deepmerge": "^4.2.2",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.1",
     "framer-motion": "^5.4.5",
     "graphql": "^16.0.1",
     "lazysizes": "^5.3.2",
@@ -92,7 +93,6 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^28.1.0",
     "concurrently": "^6.5.1",
-    "dotenv": "^16.0.1",
     "eslint": "^8.15.0",
     "he": "^1.2.0",
     "jest": "^28.1.0",
