--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:clean": "npm run test -- --clearCache"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.6",
+    "@apollo/client": "3.6.6",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.6.2",
