--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "strict": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@App/*": [
         "./app/*"
