--- a/package.json
+++ b/package.json
@@ -96,9 +96,11 @@
     "he": "^1.2.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "msw": "^0.42.1",
     "react-test-renderer": "^18.1.0",
     "ts-jest": "^28.0.3",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "engines": {
     "node": ">=14"
