--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "test:clean": "npm run test -- --clearCache"
   },
   "dependencies": {
-    "@apollo/client": "3.6.6",
-    "@headlessui/react": "^1.4.3",
+    "@headlessui/react": "1.6.4",
     "@heroicons/react": "^1.0.5",
-    "@remix-run/node": "^1.4.3",
-    "@remix-run/react": "^1.4.3",
-    "@remix-run/serve": "^1.4.3",
+    "@remix-run/node": "1.4.3",
+    "@remix-run/react": "1.4.3",
+    "@remix-run/serve": "1.4.3",
     "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
@@ -43,6 +42,7 @@
     "dotenv": "^16.0.1",
     "framer-motion": "^5.4.5",
     "graphql": "^16.0.1",
+    "graphql-tag": "^2.12.6",
     "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
@@ -59,8 +59,8 @@
     "react-intersection-observer": "^8.33.1",
     "react-lazy-load-image-component": "1.5.4",
     "react-sticky": "^6.0.3",
-    "remix": "^1.4.3",
-    "remix-utils": "^3.2.0",
+    "remix": "1.4.3",
+    "remix-utils": "3.3.0",
     "rss": "^1.2.2",
     "run-p": "^0.0.0",
     "tailwindcss": "^3.0.24",
@@ -74,8 +74,8 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-typescript": "^7.17.12",
-    "@remix-run/dev": "^1.4.3",
-    "@remix-run/eslint-config": "^1.4.3",
+    "@remix-run/dev": "1.4.3",
+    "@remix-run/eslint-config": "1.4.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.2.0",
     "@types/jest": "^27.5.1",
@@ -90,15 +90,16 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/uuid": "^8.3.3",
     "autoprefixer": "^10.4.0",
-    "babel-jest": "^28.1.0",
+    "babel-jest": "^28.1.1",
     "concurrently": "^6.5.1",
     "eslint": "^8.15.0",
     "he": "^1.2.0",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-fetch-mock": "^3.0.3",
     "msw": "^0.42.1",
     "react-test-renderer": "^18.1.0",
-    "ts-jest": "^28.0.3",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.6.4",
     "whatwg-fetch": "^3.6.2"
   },
