--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -28,6 +28,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
+      env:
+          PUBLIC_WP_API_URL: "https://etheadless.graphcdn.app/"
       - run: npm run build --if-present
       - uses: superfly/flyctl-actions@1.3
         with:
