--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -14,8 +14,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      PUBLIC_WP_API_URL: "https://etheadless.graphcdn.app/"
 
     strategy:
       matrix:
@@ -30,8 +28,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
-
       - run: npm run build --if-present
+      - env:
+          PUBLIC_WP_API_URL: "https://etheadless.graphcdn.app/"
       - uses: superfly/flyctl-actions@1.3
         with:
           args: "deploy"
