--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -27,10 +27,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+          envkey_PUBLIC_WP_API_URL: ${{secrets.PUBLIC_WP_API_URL}}
       - run: npm ci
       - run: npm run build --if-present
-      - env:
-          PUBLIC_WP_API_URL: "https://etheadless.graphcdn.app/"
       - uses: superfly/flyctl-actions@1.3
         with:
           args: "deploy"
