--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -23,11 +23,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
+        env:
+          PUBLIC_WP_API_URL: "https://etheadless.graphcdn.app/"
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          envkey_PUBLIC_WP_API_URL: ${{secrets.PUBLIC_WP_API_URL}}
       - run: npm ci
       - run: npm run build --if-present
       - uses: superfly/flyctl-actions@1.3
