added filter to search and started to load images, new npm dev run update to loader

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clean": "node clean.js",
     "graphCDN:build": "npx graphcdn push",
     "graphCDN:cacheResync": "node githubActions/clearGraphCDN.js",
-    "dev": "npm run buildPlugins && run-p dev:*",
+    "dev": "cross-env NODE_ENV=development npm run buildPlugins && run-p dev:*",
     "dev:css": "npm run css",
     "dev:remix": "remix dev",
     "css": "postcss styles --base styles --dir app/styles -w",
@@ -37,7 +37,6 @@
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
     "canvas": "^2.8.0",
-    "cross-env": "^7.0.3",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.1",
     "framer-motion": "^5.4.5",
@@ -95,6 +94,7 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^28.1.1",
     "concurrently": "^6.5.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "he": "^1.2.0",
     "jest": "^28.1.1",
