--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-imgix": "^9.5.1",
     "react-intersection-observer": "^8.34.0",
     "react-lazy-load-image-component": "1.5.4",
+    "react-render-if-visible": "^2.1.0",
     "react-sticky": "^6.0.3",
     "remix": "1.4.3",
     "remix-utils": "3.3.0",
