--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "node-fetch": "^2.6.7",
     "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^9.1.0",
+    "postcss": "8.4.14",
+    "postcss-cli": "9.1.0",
     "postcss-import": "^14.1.0",
     "prettier": "^2.5.0",
     "react": "^18.1.0",
@@ -65,7 +65,7 @@
     "remix-utils": "3.3.0",
     "rss": "^1.2.2",
     "run-p": "^0.0.0",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "3.1.4",
     "text-to-image": "^4.1.1",
     "text2png": "^2.3.0",
     "throttle-debounce": "^5.0.0",
