--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -29,6 +29,6 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-      - uses: superfly/flyctl-actions@1.3
+      - uses: superfly/flyctl-actions/setup-flyctl@master
         with:
           args: "deploy"
