--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "dotenv": "^16.0.1",
     "framer-motion": "^5.4.5",
     "fuse.js": "^6.6.2",
-    "graphql": "^16.0.1",
-    "graphql-tag": "^2.12.6",
+    "graphql": "16.5.0",
+    "graphql-tag": "2.12.6",
     "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
