--- a/package.json
+++ b/package.json
@@ -78,10 +78,14 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-typescript": "^7.17.12",
+    "@playwright/test": "^1.25.0",
     "@remix-run/dev": "1.4.3",
     "@remix-run/eslint-config": "1.4.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.2.0",
+    "@types/cross-spawn": "^6.0.2",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.5.1",
     "@types/lodash": "^4.14.177",
     "@types/md5": "^2.3.1",
@@ -96,8 +100,10 @@
     "@types/uuid": "^8.3.3",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^28.1.1",
+    "cheerio": "^1.0.0-rc.12",
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.3",
     "eslint": "^8.15.0",
     "he": "^1.2.0",
     "jest": "^28.1.1",
