--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.1",
     "framer-motion": "6.5.1",
     "fuse.js": "^6.6.2",
+    "globby": "^13.1.2",
     "graphql": "16.5.0",
     "graphql-tag": "2.12.6",
     "lazysizes": "^5.3.2",
