--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
     "canvas": "^2.8.0",
+    "canvas-confetti": "^1.5.1",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.1",
     "framer-motion": "6.5.1",
@@ -72,8 +73,7 @@
     "text2png": "^2.3.0",
     "throttle-debounce": "^5.0.0",
     "tsconfig-paths-jest": "^0.0.1",
-    "uuid": "^8.3.2",
-    "xstate": "^4.26.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
@@ -84,6 +84,7 @@
     "@remix-run/eslint-config": "1.4.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.2.0",
+    "@types/canvas-confetti": "^1.4.3",
     "@types/cross-spawn": "^6.0.2",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
