--- a/package.json
+++ b/package.json
@@ -28,23 +28,23 @@
     "test:clean": "npm run test -- --clearCache"
   },
   "dependencies": {
-    "@headlessui/react": "1.6.4",
+    "@headlessui/react": "1.7.4",
     "@heroicons/react": "^1.0.5",
-    "@lottiefiles/lottie-player": "^1.5.7",
+    "@lottiefiles/lottie-player": "1.6.0",
     "@remix-run/node": "1.4.3",
     "@remix-run/react": "1.4.3",
     "@remix-run/serve": "1.4.3",
     "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
-    "canvas": "^2.8.0",
-    "canvas-confetti": "^1.5.1",
+    "canvas": "^2.10.2",
+    "canvas-confetti": "1.6.0",
     "deepmerge": "^4.2.2",
-    "dotenv": "^16.0.1",
-    "framer-motion": "6.5.1",
+    "dotenv": "^16.0.3",
+    "framer-motion": "7.6.6",
     "fuse.js": "^6.6.2",
     "globby": "^13.1.2",
-    "graphql": "16.5.0",
+    "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
     "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
@@ -52,9 +52,9 @@
     "node-fetch": "^2.6.7",
     "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
-    "postcss": "8.4.14",
-    "postcss-cli": "9.1.0",
-    "postcss-import": "^14.1.0",
+    "postcss": "8.4.19",
+    "postcss-cli": "10.0.0",
+    "postcss-import": "15.0.0",
     "prettier": "^2.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
