--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
-    "test:clean": "npm run test -- --clearCache"
+    "test:clean": "npm run test -- --clearCache",
+    "start": "remix-serve build"
   },
   "dependencies": {
     "@headlessui/react": "1.7.4",
     "@heroicons/react": "^1.0.5",
     "@lottiefiles/lottie-player": "1.6.0",
-    "@remix-run/node": "1.4.3",
-    "@remix-run/react": "1.4.3",
-    "@remix-run/serve": "1.4.3",
+    "@remix-run/node": "^1.7.5",
+    "@remix-run/react": "^1.7.5",
+    "@remix-run/serve": "^1.7.5",
+    "isbot": "^3.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
@@ -56,15 +60,12 @@
     "postcss-cli": "10.0.0",
     "postcss-import": "15.0.0",
     "prettier": "^2.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
     "react-imgix": "^9.5.1",
     "react-intersection-observer": "^8.34.0",
     "react-lazy-load-image-component": "1.5.4",
     "react-lite-youtube-embed": "^2.2.2",
     "react-render-if-visible": "^2.1.0",
     "react-sticky": "^6.0.3",
-    "remix": "1.4.3",
     "remix-utils": "3.3.0",
     "rss": "^1.2.2",
     "run-p": "^0.0.0",
