--- a/package.json
+++ b/package.json
@@ -78,13 +78,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
-    "@babel/preset-env": "^7.18.0",
-    "@babel/preset-typescript": "^7.17.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@playwright/test": "^1.25.0",
-    "@remix-run/dev": "1.4.3",
-    "@remix-run/eslint-config": "1.4.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "13.2.0",
+    "@remix-run/dev": "^1.7.5",
+    
+    "@remix-run/eslint-config": "1.7.5",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
     "@types/canvas-confetti": "^1.4.3",
     "@types/cross-spawn": "^6.0.2",
     "@types/express": "^4.17.13",
@@ -93,8 +94,8 @@
     "@types/lodash": "^4.14.177",
     "@types/md5": "^2.3.1",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@types/react-imgix": "^9.4.0",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-sticky": "^6.0.4",
@@ -102,20 +103,20 @@
     "@types/throttle-debounce": "^5.0.0",
     "@types/uuid": "^8.3.3",
     "autoprefixer": "^10.4.0",
-    "babel-jest": "^28.1.1",
+    "babel-jest": "^29.3.1",
     "cheerio": "^1.0.0-rc.12",
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "eslint": "^8.15.0",
     "he": "^1.2.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
+    "jest": "27.5.1",
+    "jest-environment-jsdom": "27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.42.1",
-    "react-test-renderer": "^18.1.0",
-    "ts-jest": "^28.0.4",
-    "typescript": "^4.6.4",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "4.7.4",
     "whatwg-fetch": "^3.6.2"
   },
   "engines": {
