--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "@babel/preset-typescript": "^7.18.6",
     "@playwright/test": "^1.25.0",
     "@remix-run/dev": "^1.7.5",
-    
     "@remix-run/eslint-config": "1.7.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
@@ -103,7 +102,7 @@
     "@types/throttle-debounce": "^5.0.0",
     "@types/uuid": "^8.3.3",
     "autoprefixer": "^10.4.0",
-    "babel-jest": "^29.3.1",
+    "babel-jest": "27.5.1",
     "cheerio": "^1.0.0-rc.12",
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
@@ -115,7 +114,7 @@
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.42.1",
     "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "27.1.4",
     "typescript": "4.7.4",
     "whatwg-fetch": "^3.6.2"
   },
