--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/throttle-debounce": "^5.0.0",
     "@types/uuid": "^8.3.3",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "10.4.13",
     "babel-jest": "27.5.1",
     "cheerio": "^1.0.0-rc.12",
     "concurrently": "^6.5.1",
@@ -122,5 +122,18 @@
   "engines": {
     "node": ">=14"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "browserslist": {
+    "production": [
+      ">0.01%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      ">0.01%",
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
