--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@remix-run/node": "^1.7.5",
     "@remix-run/react": "^1.7.5",
     "@remix-run/serve": "^1.7.5",
+    "@sentry/remix": "^7.21.1",
     "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
