--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clean": "node clean.js",
     "graphCDN:build": "npx graphcdn push",
     "graphCDN:cacheResync": "node githubActions/clearGraphCDN.js",
-    "dev": "cross-env NODE_ENV=development npm run buildPlugins && run-p dev:*",
+    "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=development npm run buildPlugins && run-p dev:*",
     "dev:css": "npm run css",
     "dev:remix": "remix dev",
     "css": "postcss styles --base styles --dir app/styles -w",
