upgraded to 1.14 fixed providerUtils.tsx to match new remix futureConfig

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@headlessui/react": "1.7.4",
     "@heroicons/react": "^1.0.5",
     "@lottiefiles/lottie-player": "1.6.0",
-    "@remix-run/node": "^1.8.2",
-    "@remix-run/react": "^1.8.2",
-    "@remix-run/serve": "^1.8.2",
-    "@sentry/remix": "^7.31.1",
+    "@remix-run/node": "1.14.0",
+    "@remix-run/react": "1.14.0",
+    "@remix-run/serve": "1.14.0",
+    "@sentry/remix": "^7.40.0",
     "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
     "@types/rss": "0.0.29",
@@ -70,8 +70,8 @@
     "react-range": "^1.8.14",
     "react-render-if-visible": "^2.1.0",
     "react-sticky": "^6.0.3",
-    "remix": "^1.8.2",
-    "remix-utils": "5.1.0",
+    "remix": "^1.14.0",
+    "remix-utils": "6.0.0",
     "rss": "^1.2.2",
     "run-p": "^0.0.0",
     "tailwindcss": "3.1.4",
@@ -86,8 +86,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@playwright/test": "^1.25.0",
-    "@remix-run/dev": "^1.8.2",
-    "@remix-run/eslint-config": "1.8.2",
+    "@remix-run/dev": "^1.14.0",
+    "@remix-run/eslint-config": "1.14.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/canvas-confetti": "^1.4.3",
@@ -114,6 +114,7 @@
     "cross-spawn": "^7.0.3",
     "eslint": "^8.15.0",
     "he": "^1.2.0",
+    "history": "^5.3.0",
     "jest": "27.5.1",
     "jest-environment-jsdom": "27.5.1",
     "jest-fetch-mock": "^3.0.3",
