added HMR and unstable_tailwind option

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy:staging": "npm run build && flyctl deploy -c fly-staging.toml",
     "startLocal": "node -r dotenv/config node_modules/.bin/remix-serve build",
     "startog": "remix-serve build",
-    "build": "npm run buildPlugins && npm run build:css && remix build",
+    "build": "npm run buildPlugins && remix build",
     "build:css2": "tailwindcss -o app/styles/tailwind.css",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
     "tailwind": "npx tailwindcss -i ./styles/app.css -o ./app/styles/app.css --watch",
@@ -19,14 +19,17 @@
     "graphCDN:build": "npx graphcdn push",
     "graphCDN:cacheResync": "node githubActions/clearGraphCDN.js",
     "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=development npm run buildPlugins && run-p dev:*",
-    "dev:css": "npm run css",
     "dev:remix": "remix dev",
+    "ved:css": "npm run css",
     "css": "postcss styles --base styles --dir app/styles -w",
     "test": "jest",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
     "test:clean": "npm run test -- --clearCache",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "hmr": "run-p hmr:*",
+    "hmr:build": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=development remix dev",
+    "hmr:serve": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=development nodemon --watch build node_modules/.bin/remix-serve build"
   },
   "dependencies": {
     "@headlessui/react": "1.7.4",
@@ -54,6 +57,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.7",
+    "nodemon": "^2.0.21",
     "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
     "postcss": "8.4.19",
