new footer design + tailwind setup + login page design for Tuesday Makers

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "graphCDN:cacheResync": "node githubActions/clearGraphCDN.js",
     "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=development npm run buildPlugins && run-p dev:*",
     "dev:remix": "remix dev",
-    "ved:css": "npm run css",
+    "dev:css": "npm run css",
+    "ved:cssRemix": "tailwindcss -i styles/tailwind.css --output ./app/styles/app.css --config ./tailwind.config.js --watch",
+    "vedd:cssRemix": "postcss styles --dir app/styles -w",
     "css": "postcss styles --base styles --dir app/styles -w",
     "test": "jest",
     "test:watch": "jest --watch",
