new color functions for pattern playground

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "postcss-cli": "10.0.0",
     "postcss-import": "15.0.0",
     "prettier": "^2.5.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
@@ -105,6 +106,7 @@
     "@types/md5": "^2.3.1",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.25",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.8",
     "@types/react-imgix": "^9.4.0",
     "@types/react-lazy-load-image-component": "^1.5.2",
