--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     "@headlessui/react": "1.7.4",
     "@heroicons/react": "^1.0.5",
     "@lottiefiles/lottie-player": "1.6.0",
+    "@portabletext/react": "^2.0.2",
     "@remix-run/node": "1.14.0",
     "@remix-run/react": "1.14.0",
     "@remix-run/serve": "1.14.0",
+    "@sanity/client": "^5.4.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-kit": "^1.3.8",
     "@sentry/remix": "^7.40.0",
     "@shopify/shopify-api": "^2.0.0",
     "@types/prettier": "^2.4.2",
